--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,22 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #e2e8e5;
     color: #333;
     line-height: 1.6;
 }
 header{
-    background-color: #354a45;
+    background-color: #00848b;
     color: #ffffff;
     padding: 20px 0;
     text-align: center;
     margin-bottom: 10px;
-    border-bottom: 5px solid #ddd;
+    border-bottom: 5px solid #0000006b;
+}
+header h1{
+    font-size: 2.5em;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
 }
 nav{
     display: flex;
@@ -24,15 +29,21 @@ nav{
 }
 nav a{
     color: #ffffff;
-    margin: 0 15px;
+    background-color: #0000006b;
+    border-radius: 10px;
+    margin:5px;
     padding: 10px;
+    text-align: center;
     text-decoration: none;
     font-weight: bold;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease, color 0.3s ease;
 }
 nav a:hover{
-    background-color: #333;
-    padding: 10px;
-    border-radius: 5px;
+    transform: scale(1.1);
+    color: #09bdc7;
+    background-color: #0000008c;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 main{
     padding: 20px;
@@ -42,7 +53,7 @@ main{
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     justify-content: center;
-    background-color: #e2e2e2;
+    background-color: rgba(255, 255, 255, 0.5);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
@@ -50,12 +61,19 @@ main{
 .card{
     margin: auto;
     background-color: #ffffff;
-    border: 1px solid #ddd;
+    border: 2px solid #0000006b;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    max-width: 500px;
+    height: 520px;
     max-width: 600px;
     overflow: hidden;
+    transition: transform 0.2s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+}
+.card:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.02);
+    transition: transform 0.2s ease, box-shadow 0.3s ease;
 }
 .card img{
     width: 100%;
@@ -74,11 +92,19 @@ main{
 }
 
 .comment_card{
-    background-color: #e2e2e2;
-    border: 1px solid #ccc;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 2px solid #0000006b;
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+}
+.comment_card:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.02);
+    transition: transform 0.2s ease, box-shadow 0.3s ease;
 }
 .comment_card h3{
     margin-bottom: 5px;
@@ -89,12 +115,12 @@ main{
 }
 
 footer{
-    background-color: #354a45;
+    background-color: #00848b;
     color: #ffffff;
     text-align: center;
     padding: 10px 0;
     margin-top: 20px;
-    border-top: 5px solid #ddd;
+    border-top: 5px solid #0000006b;
 }
 footer .credit h3{
     margin-bottom: 5px;
