--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@ article{
     padding: 15px;
 }
 .card h2{
+    padding: 5px;
     margin-bottom: 10px;
     color: #35424a;
 }
@@ -158,4 +159,18 @@ footer .credit p{
 .footer-content img{
     max-width: 30px;
     max-height: 30px;
+}
+@media (max-width: 768px){
+    .cards{
+        grid-template-columns: 1fr;
+    }
+    nav{
+        flex-direction: column;
+        align-items: center;
+        padding: 5px;
+    }
+    .footer-content{
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
 }
