--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,12 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #dee3e4;
+    background: url(kepek/footer/body.png);
     color: #333;
     line-height: 1.6;
 }
 header{
-    background-color: #00848b;
+    background: url('kepek/footer/header.png');
     color: #ffffff;
     padding: 20px 0;
     text-align: center;
@@ -18,14 +18,16 @@ header{
     border-bottom: 5px solid #0000006b;
 }
 header h1{
+    position: relative;
     font-size: 2.5em;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
 }
 nav{
+    margin-top: 20px;
     display: flex;
     justify-content: center;
-    padding: 10px 0;
+    flex-wrap: wrap;
 }
 nav a{
     color: #ffffff;
@@ -57,21 +59,18 @@ article{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
-    justify-content: center;
     background-color: rgba(255, 255, 255, 0.5);
     padding: 20px;
     border-radius: 10px;
+    margin: auto;
+    max-width: 900px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 .card{
-    margin: auto;
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.5);
     border: 2px solid #0000006b;
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    height: 540px;
-    max-width: 600px;
-    overflow: hidden;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease, box-shadow 0.3s ease;
     cursor: pointer;
 }
@@ -81,9 +80,10 @@ article{
     transition: transform 0.2s ease, box-shadow 0.3s ease;
 }
 .card img{
+    height: auto;
     width: 100%;
-    height: 250px;
-    object-fit: cover;
+    border-radius:10px;
+
 }
 .card .tartalom{
     padding: 15px;
@@ -96,7 +96,16 @@ article{
 .card p{
     margin-bottom: 15px;
 }
-
+.comments{
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 20px;
+    border-radius: 10px;
+    margin: auto;
+    max-width: 900px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin-top: 30px;
+}
 .comment_card{
     background-color: rgba(255, 255, 255, 0.5);
     border: 2px solid #0000006b;
@@ -121,11 +130,11 @@ article{
 }
 
 footer{
-    background-color: #00848b;
+    background: url('kepek/footer/header.png');
     color: #ffffff;
+    padding: 20px 0;
     text-align: center;
-    padding: 10px 0;
-    margin-top: 20px;
+    margin-top: 10px;
     border-top: 5px solid #0000006b;
 }
 footer .credit h3{
@@ -136,13 +145,14 @@ footer .credit p{
 }
 .footer-content{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
-    margin-top: 10px;
-    padding: 10px;
     max-width: 600px;
     margin: auto;
-    margin-bottom: 20px;
+    background-color: #0000006b;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
 }
 .footer-content .links{
     display: grid;
@@ -152,26 +162,35 @@ footer .credit p{
 }
 .footer-content .links a{
     color: #ffffff;
+    background-color: #0000006b;
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
     text-decoration: none;
+    font-weight: bold;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease, color 0.3s ease;
 }
 .footer-content .links a:hover{
-    text-decoration: underline;
+    transform: scale(1.1);
+    color: #09bdc7;
+    background-color: #0000008c;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 .footer-content img{
     max-width: 30px;
     max-height: 30px;
 }
-@media (max-width: 768px){
+@media (max-width: 800px){
     .cards{
         grid-template-columns: 1fr;
     }
     nav{
-        flex-direction: column;
-        align-items: center;
-        padding: 5px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
     }
     .footer-content{
-        grid-template-columns: 1fr;
-        text-align: center;
+        grid-template-columns: 1fr 1fr;
     }
 }
