--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,11 @@ article{
 .card p{
     margin-bottom: 15px;
 }
+.tartalom{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
 .comments{
     margin: auto;
     background-color: rgba(255, 255, 255, 0.5);
